src/app/storage/storage.scss
@import '../../scss/variables.scss';

.storage {
  h2 {
    margin: 0 0 12px 0;
  }

  .storage-status {
    font-size: 12px;
    color: #ddd;
    float: right;

    &.enabled {
      color: #20ea42;
    }
  }

  p {
    margin: 8px 0;
  }

  .storage-adapter {
    background: #353535;
    margin: 10px 0 0 0;
    padding: 8px;
  }

  ul {
    margin: 8px 0;
    padding-left: 2em;
  }

  .google-user {
    overflow: hidden;
    img {
      border-radius: 50%;
      float: left;
      margin-right: 8px;
      height: 32px;
      width: 32px;
    }
    div {
      &:nth-child(2) {
        font-weight: bold;
      }
    }
  }

  .storage-guage {
    flex: 1;
    background-color: rgba(0, 0, 0, 0.6);
    position: relative;
    min-height: 17px;
    display: flex;
    flex-direction: row;
    align-items: center;
    color: white;
    div {
      background-color: #6dcc66;
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      &.dim-usage {
        background-color: $orange;
      }
      &.full {
        background-color: red;
      }
    }
  }
}

